static/css/style.css
/* Universal Styling */
body {
    background-color: #424242;
    font-family: 'Open Sans', sans-serif;
  }

h1 {
    font-family: 'Fredericka the Great', sans-serif;
    font-size: clamp(2.375rem, -0.5227rem + 14.4886vw, 8.75rem);
}

h2 {
    font-size: clamp(1.5rem, 1.0455rem + 2.2727vw, 2.5rem);
}

h3 {
    font-family: 'Fredericka the Great', sans-serif;
    font-size: clamp(2.25rem, 1.6818rem + 2.8409vw, 3.5rem);
    margin-top: 2.5rem;
}

p {
    font-size: clamp(1rem, 0.8864rem + 0.5682vw, 1.25rem);
}

/* Form Styling */
input {
    font-size: clamp(1rem, 0.9432rem + 0.2841vw, 1.125rem);    
}

/* Flashes styling*/
.flashes {
    font-size: 20px;
    line-height: 40px;
    width: 80%;
}

/* Nav Bar Styling */
.brand-logo {
    margin: 0 20px;
    font-family: "Fredericka the Great", sans-serif;
    font-size: 30px;
}

.nav-link {
    font-size: 20px;
    margin: 0 20px;
}

/* Footer */
footer {
    position: relative;
    bottom: 0;
    left: 0;
    width: 100%;
}

.links {
    font-size: 16px;
}

/* Profile Styling */
.profile-message {
    padding: 60px 0;
}

.profile-buttons {
   margin-bottom: 200px;
}

.profile-buttons a {
    margin: 10px;
}

/* Register Page Styling */
.register-card {
    box-shadow: none;
    background: #fafafa;
    border-radius: 20px;
    padding: 20px 20px 0 20px;
}

/* General Button Styling */
.btn-large {
    border-radius: 40px;
    margin: 20px 10px;
}

.crud-btn {
    margin-top: 20px;
    display: flex;
    flex-direction: row;
}

.crud-btn a {
    border-radius: 40px;
    margin-right: 10px;
}

    /* Dropdown Genre Option*/
    .select-dropdown {
        color: #fafafa;
    }

    .select-dropdown li.disabled, .select-dropdown li.disabled>span, .select-dropdown li.optgroup {
        color: #fafafa;
        background-color: #E57373;
    }

    .dropdown-content li>a, .dropdown-content li>span {
        color: #FF5252;
    }

    /*Date Picker*/
    .datepicker-date-display {
        background-color: #E57373;
    }

    .datepicker-calendar-container {
        background-color: #FF5252;
        color: white;
    }

    .datepicker-date-display {
        color: #fafafa;
    }

    .datepicker-table td.is-selected {
        background-color: #FFCDD2;
        color: #424242;
    }

    .datepicker-cancel, .datepicker-clear, .datepicker-today, .datepicker-done {
        color: #fff;
    }

    .datepicker-clear {
        color: #000;
    }

    .datepicker-table abbr {
        text-decoration: none;
        color: #000;
    }

    .datepicker-table td.is-today {
        color: black;
    }

    /* Lever select */
    .switch label .lever:before {
        background-color: #e57373;
    }

    .switch label input[type=checkbox]:checked+.lever {
        background-color: #E57373;
    }

    .switch label input[type=checkbox]:checked+.lever:after {
        background-color: #FF5252;
    }

/* Mobile */
@media screen and (min-width:260px) {
    /* Index Styling */
    .entry-container {
        display: flex;
        flex-direction: column;
        margin: 20px;
    }

    .card-panel {
        box-shadow: 0px 0px 20px #fafafa2b;
    }

    .sort-buttons {
        margin: 10px 40px;
    }

    .sort-btn {
        margin: 10px;
    }

    /* Review Card Styling*/
    .bold {
        font-weight: bold;
    }

    .book-title {
        font-size: clamp(1.375rem, 1.2045rem + 0.8523vw, 1.75rem);
    }

    .author {
        font-size: clamp(1.25rem, 1.0795rem + 0.8523vw, 1.625rem);
    }

    .entry-title {
        font-size: clamp(1.125rem, 0.9545rem + 0.8523vw, 1.5rem);    
    }

    .genre {
        font-size: clamp(1rem, 0.8295rem + 0.8523vw, 1.375rem);
    }

    .review {
        font-size: clamp(1rem, 0.8295rem + 0.8523vw, 1.375rem);    
    }

    .book-info {
        font-size: clamp(0.875rem, 0.7614rem + 0.5682vw, 1.125rem);    
    }

    .user-info {
        font-size: clamp(0.75rem, 0.6364rem + 0.5682vw, 1rem);    
    }

    .recommended i {
        font-size: clamp(1.25rem, 1.1364rem + 0.5682vw, 1.5rem);
        margin-left: 2.5rem;
    }
}

/* Tablet */
@media only screen and (min-width: 768px) {
    /* Index Styling */
    .entry-container {
        display: grid;
        grid-template-columns: 50% 50%;
    }

    .card-panel {
        margin: 5px;
        padding-top: 60px;
    }

    /* Button Styling */
    .btn-large {
        font-size: 22px;
        padding: 0 40px;
    }
}

/* Desktop */
@media only screen and (min-width: 1024px) {
    /* Index Styling */
    .entry-container {
        display: grid;
        grid-template-columns: 33% 33% 33%;
    }

    .card-panel {
        margin: 10px;
    }

    /* Button Styling */
    .btn-large {
        font-size: 24px;
    }
}

